...
            android:layout_marginTop="5dp"
            android:text="file"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mapping_spinner" />

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="98dp"
            android:layout_height="50dp"
            android:text="Upload"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btn_file"
            app:layout_constraintStart_toStartOf="@+id/btn_file" />
...
